- Possibilité d'indiquer si un dialogue peut-être fermé - Correction bug z-index

--- a/EdgeCreator/css/edgecreator_wizard.css
+++ b/EdgeCreator/css/edgecreator_wizard.css
@@ -32,6 +32,7 @@ button#connexion, button#deconnexion {
 
 .ui-dialog {
 	top: 70px !important;
+	z-index: 1000;
 }
 
 .ui-dialog.main {
